[gd_scene load_steps=4 format=3 uid="uid://bk2p64qvo36mo"]

[ext_resource type="Theme" uid="uid://c4hslr8ga2ory" path="res://addons/fps_counter/Menu_Theme.tres" id="1"]
[ext_resource type="PackedScene" uid="uid://c3hsxgmqwip4g" path="res://addons/fps_counter/Counter.tscn" id="2"]
[ext_resource type="Script" path="res://menus/debug_overlay.gd" id="3"]

[node name="DebugOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")
chunk_invalid_color = Color(0, 0, 0, 0.686275)
chunk_started_color = Color(0.898039, 1, 0, 0.686275)
chunk_generated_color = Color(0, 1, 1, 0.686275)
chunk_active_color = Color(0.498039, 1, 0, 0.686275)
chunk_inactive_color = Color(0.960784, 0.960784, 0.862745, 0.686275)
chunk_purged_color = Color(0.862745, 0.0784314, 0.235294, 0.686275)
code_revision_identifier = "_4B3"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 872.0
offset_bottom = 270.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1")
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Timing_Stats" type="Label" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1")
text = "
 Chunk Generation Times:
     Min: 0.13
     Max: 2.24
     Avg: 1.46

 Chunk Render Times:        
     Min: 0.20
     Max: 0.53
     Avg: 0.38

 Memory used (MB):            0 
 Memory Per Chunk (Estimate): 0"

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Chunk_Counts" type="Label" parent="HBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1")
text = "
 Chunks Awaiting Render:             0
 Chunks Active:                      0
 Chunks Disabled:                    0

 Total Chunks Generated:             18 
 Total Chunks Rendered:              18
 Total Chunks Unloaded:              0
 Total Chunks Purged:                0
 T. Chunks Re-Activated:             0
"

[node name="MarginContainer4" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Counter" parent="MarginContainer4" instance=ExtResource("2")]
layout_mode = 2

[node name="Player_Pos" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -81.0
offset_right = 192.0
grow_vertical = 0
size_flags_vertical = 0
theme = ExtResource("1")
text = "Player Pos:
100, 34, 12"

[node name="Reset_Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Reset_Timer" to="." method="_on_Reset_Timer_timeout"]
